# mutorere

./: .ghc.environment.x86_64-darwin-8.4.3  .gitignore  Dockerfile  README.md  TAGS  cabal.project  cabal.project.freeze  cabal.sandbox.config  exec.sh  hp.txt  mutorere  mutorere.cabal  mutorere.linux  mutorere.macos  package.sh  run.sh  shell.nix  start.sh
.cabal-sandbox/: world
.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/: libHSYampa-0.11.1-AIdeCNLqD6XCM2hL4irfeW-ghc8.4.3.dylib  libHSbase-orphans-0.8-DnR0b2Qpwpe17jvCBohN6x-ghc8.4.3.dylib  libHSelerea-2.8.0-3Bi0ka5nax44uEve4EV3OP-ghc8.4.3.dylib  libHSelerea-2.9.0-5m2Y5PNhbMQAffK6Iju0yf-ghc8.4.3.dylib  libHSrandom-1.1-9LLJAJa4iQFLJiLXBOBXBV-ghc8.4.3.dylib  libHStransformers-base-0.4.5.2-9baFU7phiuIKF7KTSSI06Q-ghc8.4.3.dylib  libHStransformers-compat-0.6.2-682b8VXWs0S7WzvAIZy3S3-ghc8.4.3.dylib
.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/Yampa-0.11.1-AIdeCNLqD6XCM2hL4irfeW/FRP/: Yampa.dyn_hi  Yampa.hi  Yampa.p_hi
.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/base-orphans-0.8-DnR0b2Qpwpe17jvCBohN6x/Data/: Orphans.dyn_hi  Orphans.hi  Orphans.p_hi
.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/elerea-2.8.0-3Bi0ka5nax44uEve4EV3OP/FRP/: Elerea.dyn_hi  Elerea.hi  Elerea.p_hi
.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/elerea-2.9.0-5m2Y5PNhbMQAffK6Iju0yf/FRP/: Elerea.dyn_hi  Elerea.hi  Elerea.p_hi
.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/random-1.1-9LLJAJa4iQFLJiLXBOBXBV/System/: Random.dyn_hi  Random.hi  Random.p_hi
.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/transformers-compat-0.6.2-682b8VXWs0S7WzvAIZy3S3/: Paths_transformers_compat.dyn_hi  Paths_transformers_compat.hi  Paths_transformers_compat.p_hi
.cabal-sandbox/share/doc/x86_64-osx-ghc-8.4.3/elerea-2.8.0/html/: index.html  (+7 more)
.cabal-sandbox/x86_64-osx-ghc-8.4.3-packages.conf.d/: Yampa-0.11.1-AIdeCNLqD6XCM2hL4irfeW.conf  base-orphans-0.8-DnR0b2Qpwpe17jvCBohN6x.conf  elerea-2.8.0-3Bi0ka5nax44uEve4EV3OP.conf  elerea-2.9.0-5m2Y5PNhbMQAffK6Iju0yf.conf  package.cache  random-1.1-9LLJAJa4iQFLJiLXBOBXBV.conf  transformers-base-0.4.5.2-9baFU7phiuIKF7KTSSI06Q.conf  transformers-compat-0.6.2-682b8VXWs0S7WzvAIZy3S3.conf
.devcontainer/: Dockerfile  devcontainer.json
src/: .#Main.hs  GlossInterface.hs  Main.hs
(+201 files in other folders)
