Name:                mutorere
Version:             1.0.0
License:             MIT
License-file:        LICENSE
Author:              Scott Brown
Maintainer:          brown131@yahoo.com
Build-Type:          Simple
Cabal-Version:       >= 1.6
Stability:           experimental
Category:            Graphics
Description:
        Mu Torere game

Executable mutorere
  Main-is:        Main.hs
  hs-source-dirs: src
  Build-depends:
                base             >= 4.8 && < 4.12
              , gloss            >= 1.12.0.0
              , gloss-rendering  >= 1.12.0.0
              , elerea           == 2.8.0
              , mtl              >= 2.2.2
  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts
